create / update connection impl
